# cdc_debezium_kafka

./: LICENSE  README.md  pyproject.toml  simple_start_up_notes.md
.devcontainer/: devcontainer.json
config/: debezium-postgres-connector.json  elasticsearch-sink-connector.json
docker/: docker-compose.yml
docs/: 01_setup_database.md  02_setup_connectors.md  03_produce_changes.md  04_consume_kafka.md  05_kafka_to_elastic.md  docker_compose.md  elastic_searc_sink_connector.md  how_debezium_and_postgres_communicate.md  kafka_topic_explained.md  postgres_debezium_source_connector_beginner_readme.md
docs/old/: 02_setup_connectors_old.md  FINDINGS.md  cdc_stack_overview_debezium_kafka_and_elasticsearch.md  kibana_guide.md  quickstart_guide.md
src/cdc_spike/: consume_kafka.py  kafka_to_elasticsearch.py  produce_changes.py  setup_connectors.py  setup_database.py
